# rust-ffi-examples

./: .gitignore  LICENSE  README.md
IosSwiftStaticlib/: IosSwiftStaticlib.podspec  Makefile  README.md
IosSwiftStaticlib/Example/: Podfile
IosSwiftStaticlib/Example/IosSwiftStaticlib.xcodeproj/: project.pbxproj
IosSwiftStaticlib/Example/IosSwiftStaticlib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IosSwiftStaticlib/Example/IosSwiftStaticlib.xcodeproj/xcshareddata/xcschemes/: IosSwiftStaticlib-Example.xcscheme
IosSwiftStaticlib/Example/IosSwiftStaticlib.xcworkspace/: contents.xcworkspacedata
IosSwiftStaticlib/Example/Tests/: Tests.swift
IosSwiftStaticlib/IosSwiftStaticlib/Classes/: Core.swift  rust-ios.h
android-rust-jni/: build.gradle  settings.gradle
android-rust-jni/app/: build.gradle
android-rust-jni/app/src/androidTest/java/com/smalls0098/rust_jni/: ExampleInstrumentedTest.kt
android-rust-jni/app/src/main/: AndroidManifest.xml
android-rust-jni/app/src/main/res/values/: strings.xml  themes.xml
android-rust-jni/app/src/main/res/values-night/: themes.xml
android-rust-jni/gradle/wrapper/: gradle-wrapper.properties
android-rust-jni/mylibrary/: build.gradle  rust.gradle
android-rust-jni/mylibrary/src/main/: AndroidManifest.xml
android-rust-jni/mylibrary/src/main/rust/jni/: Cargo.toml
android-rust-jni/mylibrary/src/main/rust/jni/src/: error.rs  jni.rs  lib.rs  logger.rs
rust-core/: Cargo.toml
rust-core/src/: lib.rs
rust-ios-staticlib/: Cargo.toml  Makefile
rust-ios-staticlib/src/: lib.rs  rust-ios.h
(+6 files in other folders)
