[package]
name = "rust-core"
version = "0.1.0"
edition = "2018"
authors = ["smalls <smalls0098@gmail.com>"]
description = "a rust core"
license = "Apache-2.0"

[dependencies]


[profile.release]
opt-level = 3
debug = false
lto = true #"fat", "thin" true
codegen-units = 1
incremental = false
panic = 'abort'